# ongaku

./: .gitignore  Dockerfile  README.md  alembic.ini  db.py  docker-compose.yml  main.py  pom.xml  pyproject.toml
client/: package-lock.json  package.json
client/app/: layout.tsx  page.tsx
hooks/: pre-commit
migrations/: env.py  script.py.mako
model/: __init__.py  artist.py
src/main/java/com/hzokbe/ongaku/: Main.java  OngakuApplication.java
src/main/java/com/hzokbe/ongaku/config/security/: SecurityConfig.java
src/main/java/com/hzokbe/ongaku/controller/song/: SongController.java
src/main/java/com/hzokbe/ongaku/controller/user/: UserController.java
src/main/java/com/hzokbe/ongaku/dto/auth/: SignInRequestDTO.java  SignInResponseDTO.java  SignUpRequestDTO.java  SignUpResponseDTO.java
src/main/java/com/hzokbe/ongaku/dto/song/: SongDTO.java
src/main/java/com/hzokbe/ongaku/exception/: GlobalExceptionHandler.java
src/main/java/com/hzokbe/ongaku/exception/song/: AlreadyRegisteredSongException.java  InvalidSongTitleException.java  SongNotFoundException.java
src/main/java/com/hzokbe/ongaku/exception/user/: AlreadyRegisteredUserException.java  InvalidPasswordException.java  InvalidUsernameException.java
src/main/java/com/hzokbe/ongaku/middleware/auth/: AuthMiddleware.java
src/main/java/com/hzokbe/ongaku/model/role/: Role.java
src/main/java/com/hzokbe/ongaku/model/song/: Song.java
src/main/java/com/hzokbe/ongaku/model/user/: User.java
src/main/resources/: application-dev.yml  application.yml  hibernate.cfg.xml
(+15 files in other folders)
