[project]
name = "ongaku"
version = "0.1.0"
description = "Ongaku is a modern music streaming platform inspired by Spotify"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "mypy>=1.19.1",
    "ruff>=0.15.5",
]

[tool.mypy]
python_version = "3.14"
strict = true
